--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device=width, initial-scale=1.0">
         <title class="search_inquiry"> Court Avengers </title>
 
-        <link rel="stylesheet" href="style.css">
-        <link href="jquery/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
-        <link href="jquery/css/ui-lightness/jquery-ui-1.10.0.custom.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="/static/style.css">
+        <link href="/static/jquery/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
+        <link href="/static/jquery/css/ui-lightness/jquery-ui-1.10.0.custom.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
     </head>
     <body style="background-color: whitesmoke;">
-        <script src="jquery/js/jquery-1.9.0.min.js"></script>
-        <script src="jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
-        <script src="searchresults.js"></script>
+        <script src="/static/jquery/js/jquery-1.9.0.min.js"></script>
+        <script src="/static/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
+        <script src="/static/searchresults.js"></script>
     
         <div class="frontbar">
             <h1 class="websiteName"> Court Avengers </h1>
@@ -22,7 +22,7 @@
             <input class="input" style="width: 80%; margin-left: -10px; z-index: 1; "type="search" autocomplete="off" spellcheck="false" role="combobox" aria-live="polite"
                 placeholder="How can we help you?">
             <div class="searchbutton">
-                <a href="searchresults.html">
+                <a href="{{ url_for('search')}}">
                     <input class="searchclick contact hoverable" value="Search Results" type="submit">
                 </a>
                 <input class="contact hoverable" value="Emergency Call" type="submit">
