--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -19,9 +19,13 @@
         <nav class="navbar sticky-top p-3" style="background-color: #8C1515;">
             <span class="websiteNameSmall"> Court Avengers </span>
             <span>
-                <span class="microphone icon" style="margin-left: 20px;"><i class="fa fa-microphone fa-2x"></i></span>
-                <input class="input" style="width: 400px;" type="search" autocomplete="off" spellcheck="false" role="combobox" aria-live="polite"
-                placeholder="How can we help you?">
+                <form class="searchbar">
+                    <button class="microphone" style="margin-left: 20px;"><i class="fa fa-microphone fa-2x"></i></button>
+                    <a class="enter" href="{{ url_for('search')}}">
+                        <input class="input" style="width: 400px;" type="search" autocomplete="off" spellcheck="false" role="combobox" aria-live="polite"
+                    placeholder="How can we help you?">
+                    </a>
+                </form>
             </span>
         </nav>
 
