--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,7 @@ html,body
     outline: none;
     padding-inline-end: 44px;
     padding-inline-start: 52px;
-    position: relative;
+    /* position: relative; */
 }
 .tagline {
     font-family: Arial, Helvetica, sans-serif;
@@ -44,11 +44,10 @@ html,body
 }
 .microphone {
     background: transparent; 
-    position: fixed; 
     z-index: 10; 
     border: none; 
     margin-top: 10px;
-    margin-left: 10px;
+    margin-bottom: -1px;
     cursor: pointer;
 }
 .frontbar{
